test/force-app/main/default/objects/Type_Adresse_Contact__c/Type_Adresse_Contact__c.object-meta.xml
<CustomObject>
    <label>Type Adresse Contact</label>
    <nameField>
        <displayFormat>Adresse-{00}</displayFormat>
        <label>Type Adresse Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Type adresse contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>