test/force-app/main/default/objects/Type_Adresse_Contact__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse</label>
    <type>Address</type>
</CustomField>