test/force-app/main/default/objects/Type_Adresse_Contact__c/fields/Type_d_adresse__c.field-meta.xml
<CustomField>
    <fullName>Type_d_adresse__c</fullName>
    <label>Type d&apos;adresse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adresse professionnelle</fullName>
            </value>
            <value>
                <fullName>Résidence principale</fullName>
            </value>
            <value>
                <fullName>Résidence secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>